fix for crash converting ooo31011-1.sxw and tdf#146132

./instdir/program/soffice.bin --headless --convert-to odt
./ooo31011-1.sxw

regression from
    commit 681e10eecf67a1a01bdec2cc9b834e0345e25206
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Dec 9 11:12:49 2021 +0200
    tdf#146137 tdf#146132 image redrawing

It is because we cache high-level primitives, and then during paint, we
decompose those high-level primitives, and that triggers layout,
which triggers an invalidate i.e. an ActionChanged(), which blows
away the cached data we are iterating over.

Change-Id: Id18e47b6c2b71a5404f24b075a43d2040a5e3509
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/126995
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>